--- a/Planillas-de-estilos/main.css
+++ b/Planillas-de-estilos/main.css
@@ -64,7 +64,7 @@ h1{
 footer{
     background-color:#FFC100;
 }
-img{
+.foto-comida{
     width: 250px;
     height: 200px;
     border-radius: 80px;
