--- a/templates/receta1.html
+++ b/templates/receta1.html
@@ -6,7 +6,7 @@
     <title>Milanesa</title>
         <link rel="stylesheet" href="../Planillas-de-estilos/styles.css">  
         <div class="logo-container">
-            <a href="../index.html">
+            <a href="../main.html">
             <img src="../Imagenes/logo-9976.png" alt="Logo">
         </a>
         </div>
