--- a/Planillas-de-estilos/styles.css
+++ b/Planillas-de-estilos/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #e4ad89
+    background-color: #ffffff
 }
 
 header {
