--- a/templates/Contacto.html
+++ b/templates/Contacto.html
@@ -48,6 +48,20 @@
 
         <input class="enviar" type="submit" value="Enviar">
     </form>
+    <div>
+        <a href="https://www.facebook.com/?locale=es_LA">
+            <img class="redes" src="../Imagenes/facebook.png" alt="">
+        </a>
+        <a href="https://www.instagram.com">
+            <img class="redes" src="../Imagenes/instagram.png" alt="">
+        </a>
+        <a href="https://www.tiktok.com/@Sabor-Argentino">
+            <img class="redes" src="../Imagenes/tik-tok.png" alt="">
+        </a>
+        <a href="https://web.whatsapp.com">
+            <img class="redes" src="../Imagenes/whatsapp.png" alt="">
+        </a>
+    </div>
 
     <script>
         function validateForm() {
