--- a/templates/receta4.html
+++ b/templates/receta4.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../Planillas-de-estilos/styles.css">  
         <div class="logo-container">
             <a href="../main.html">
+            <i class="fa-regular fa-heart"></i>
+            <i class="fa-solid fa-house"></i>
             <img src="../Imagenes/logo-9976.png" alt="Logo">
         </a>
         </div>
