--- a/templates/receta1.html
+++ b/templates/receta1.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="../Planillas-de-estilos/styles.css">  
         <div class="logo-container">
             <a href="../main.html">
-            <img src="../Imagenes/logo-9976.png" alt="Logo">
+            <img src="../Imagenes/flecha-pequena-izquierda.png" style="border-radius: 50px; width: 50px;padding: 5px; ">
         </a>
         </div>
         <h1>Cómo hacer milanesa de carne</h1>
