--- a/templates/receta3.html
+++ b/templates/receta3.html
@@ -6,8 +6,8 @@
     <title>Asado</title>
     <link rel="stylesheet" href="../Planillas-de-estilos/styles.css">  
         <div class="logo-container">
-            <a href="../index.html">
-            <img src="../Imagenes/logo-9976.png" alt="Logo">
+            <a href="../main.html">
+                <img src="../Imagenes/flecha-pequena-izquierda.png" style="border-radius: 50px; width: 50px;padding: 5px; ">
         </a>
         </div>
     <h1>Cómo hacer un buen asado</h1>
