--- a/Planillas-de-estilos/Contacto.css
+++ b/Planillas-de-estilos/Contacto.css
@@ -17,6 +17,7 @@ a{
     color: black;
 }
 body{
+    display: flexbox;
     justify-content: center;
     align-items: center;
     text-align: center;
