--- a/templates/receta4.html
+++ b/templates/receta4.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="../Planillas-de-estilos/styles.css">  
         <div class="logo-container">
             <a href="../main.html">
-            <i class="fa-regular fa-heart"></i>
-            <i class="fa-solid fa-house"></i>
-            <img src="../Imagenes/logo-9976.png" alt="Logo">
-        </a>
+                <img src="../Imagenes/flecha-pequena-izquierda.png" style="border-radius: 50px; width: 50px;padding: 5px; ">        </a>
         </div>
     <h1>Cómo hacer empanadas de carne</h1>
         
