--- a/templates/receta2.html
+++ b/templates/receta2.html
@@ -6,7 +6,7 @@
     <title>Locro</title>
     <link rel="stylesheet" href="../Planillas-de-estilos/styles.css">  
         <div class="logo-container">
-            <a href="../main.html">
+            <a href="../index.html">
                 <img src="../Imagenes/flecha-pequena-izquierda.png" style="border-radius: 50px; width: 50px;padding: 5px; ">
         </a>
         </div>
