--- a/templates/receta1.html
+++ b/templates/receta1.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Milanesa</title>
-        <link rel="stylesheet" href="../Planillas-de-estilos/styles.css">  
+        <link rel="stylesheet" href="../Planillas-de-estilos/Recetas.css">  
+
         <div class="logo-container">
             <a href="../index.html">
             <img src="../Imagenes/flecha-pequena-izquierda.png" style="border-radius: 50px; width: 50px;padding: 5px; ">
         </a>
         </div>
-        <h1>Cómo hacer milanesa de carne</h1>
+        <img class="logo" src="../Imagenes/logo-9976.png">     
     </head>
 <body>
-    <ul>
-        <li>1. Para empezar con la receta de milanesa de carne, primero debes sazonar la carne con la sal, la pimienta y el orégano al gusto. Luego, pasa cada uno de los filetes de ternera por el pan rallado que necesites (por ambos lados).</li>
-        <li>2. En un recipiente aparte, bate los huevos y baña los filetes de carne en ellos. Después, para fijar el rebozado de las milanesas, vuelve a pasarlos por el pan rallado.</li>
-        <li>3. Ahora, pon el aceite a calentar y, cuando esté caliente, fríe los filetes de carne rebozados a fuego medio. Deberás freírlos hasta que estén dorados por ambos lados.</li>
-        <li>4. Para retirar el exceso de aceite de las milanesas de carne puedes colocarlas en papel absorbente. ¡Listas para comer! Cuéntanos en los comentarios tu opinión y comparte con nosotros una foto del resultado final.</li>
-    </ul>  
+    <div class="main-container">
+        <h1>Cómo hacer milanesa de carne</h1>
+        <img class="imagen-comida" src="../Imagenes/mila.jpg" width="350px" height="200px">
+        <div class="receta"> 
+            <li> Para empezar con la receta de milanesa de carne, primero debes sazonar la carne con la sal, la pimienta y el orégano al gusto. Luego, pasa cada uno de los filetes de ternera por el pan rallado que necesites (por ambos lados).</li>
+            <li> En un recipiente aparte, bate los huevos y baña los filetes de carne en ellos. Después, para fijar el rebozado de las milanesas, vuelve a pasarlos por el pan rallado.</li>
+            <li> Ahora, pon el aceite a calentar y, cuando esté caliente, fríe los filetes de carne rebozados a fuego medio. Deberás freírlos hasta que estén dorados por ambos lados.</li>
+            <li> Para retirar el exceso de aceite de las milanesas de carne puedes colocarlas en papel absorbente. ¡Listas para comer! Cuéntanos en los comentarios tu opinión y comparte con nosotros una foto del resultado final.</li>
+        </div>
+    </div>  
 </body>
 </html>
