--- a/Planillas-de-estilos/Contacto.css
+++ b/Planillas-de-estilos/Contacto.css
@@ -7,17 +7,18 @@ nav{
     border: 300px;
     justify-content: space-around;
     border-color: black;
-    background-color:#FFC100;
+    background-color:rgba(118, 54, 11, 0.833);
     padding: 10px;
 }
 a{
     text-decoration: none;
     font-family: sans-serif;
     font-style:normal;
-    color: black;
+    color: rgba(255, 255, 255, 0.663);
 }
 body{
     display: flexbox;
+    background-color: rgba(118, 54, 11, 0.833);
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -46,6 +47,7 @@ label{
     height: 40px;
 }
 .Formulario{
+    background-color: white;
     align-self: center;
     margin-top: 23px;
     border: 2px solid black;
