--- a/templates/receta4.html
+++ b/templates/receta4.html
@@ -4,37 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empanadas</title>
-    <link rel="stylesheet" href="../Planillas-de-estilos/styles.css">  
+    <link rel="stylesheet" href="../Planillas-de-estilos/Recetas.css">  
         <div class="logo-container">
             <a href="../index.html">
                 <img src="../Imagenes/flecha-pequena-izquierda.png" style="border-radius: 50px; width: 50px;padding: 5px; ">        </a>
         </div>
-    <h1>Cómo hacer empanadas de carne</h1>
+        <img class="logo" src="../Imagenes/logo-9976.png">
         
 </head>
 <body>
-    <ul>
-        <h2>Ingredientes</h2>
-        <ul>
-            <li>Masa para empanadas (comprada o casera)</li>
-            <li>500 gr de carne de res molida</li>
-        <li>2 cebollas picadas</li>
-        <li>1 pimiento rojo picado</li>
-        <li>2 huevos duros picados</li>
-        <li>100 gr de aceitunas verdes o negras picadas</li>
-        <li>Comino, pimentón, sal y pimienta a gusto</li>
-        <li>Aceite para freír o pintar la fuente para horno (dependiendo del tipo de cocción)</li>
-        <li>1 huevo batido</li>
-         </ul>
-       
-    
-    <h2>Preparación</h2>
-    <ul>
-        <li>1.	En una sartén con aceite caliente, saltear las cebollas y el pimiento. Agregar la carne molida, condimentar y cocinar. Añadir mezclando los huevos duros picados y las aceitunas. Retirar del fuego.</li>
-        <li>2.	Rellenar cada círculo de masa con la mezcla, doblar formando una media luna y sellar los bordes con un tenedor o repulgue.</li>
-        <li>3.	Pincelar las empanadas con huevo batido para darles un brillo dorado. Hornear en horno precalentado a 180°C durante 25-30 minutos. Retirar.</li>
-        <li>4.	Para freír las empanadas calentar una cantidad suficiente de aceite en una sartén a fuego medio. Freírlas unos 2-3 minutos y al retirar colocar sobre papel absorbente.</li>
-    </ul>
-    </ul>  
+    <div class="main-container">
+        <h1>Cómo hacer empanadas de carne</h1>
+        <img class="imagen-comida" src="../Imagenes/Empanadas.jpg"> 
+        <img class="imagen-comida" src="../Imagenes/empanadas-argentinas.jpg">
+        <div class="receta">
+            <h2>Ingredientes</h2>
+            
+                <li>Masa para empanadas (comprada o casera)</li>
+                <li>500 gr de carne de res molida</li>
+                <li>2 cebollas picadas</li>
+                <li>1 pimiento rojo picado</li>
+                <li>2 huevos duros picados</li>
+                <li>100 gr de aceitunas verdes o negras picadas</li>
+                <li>Comino, pimentón, sal y pimienta a gusto</li>
+                <li>Aceite para freír o pintar la fuente para horno (dependiendo del tipo de cocción)</li>
+                <li>1 huevo batido</li>
+            
+            <h2>Preparación</h2>
+            
+                <li>En una sartén con aceite caliente, saltear las cebollas y el pimiento. Agregar la carne molida, condimentar y cocinar. Añadir mezclando los huevos duros picados y las aceitunas. Retirar del fuego.</li>
+                <li>Rellenar cada círculo de masa con la mezcla, doblar formando una media luna y sellar los bordes con un tenedor o repulgue.</li>
+                <li>Pincelar las empanadas con huevo batido para darles un brillo dorado. Hornear en horno precalentado a 180°C durante 25-30 minutos. Retirar.</li>
+                <li>Para freír las empanadas calentar una cantidad suficiente de aceite en una sartén a fuego medio. Freírlas unos 2-3 minutos y al retirar colocar sobre papel absorbente.</li>
+            
+        </div>
+    </div>  
 </body>
 </html>
