--- a/templates/Contacto.html
+++ b/templates/Contacto.html
@@ -17,7 +17,7 @@
         <a class="pestania" href="Contacto.html">Contactanos</a>
         <a class="pestania" href="../index.html">Recetas</a>
         <a class="pestania" href="">Inicio</a>
-        <a class="pestania" href="">Faq</a>
+        <a class="pestania" href="./Faq.html">Faq</a>
         <img class="logo-container" src="../Imagenes/logo-9976.png" alt="Logo" width="50" height="30">
 </nav>
 <body>
