--- a/templates/Contacto.html
+++ b/templates/Contacto.html
@@ -15,9 +15,9 @@
 <nav>
         <img class="logo-container" src="../Imagenes/logo-9976.png" alt="Logo" width="50" height="30">
         <a class="pestania" href="Contacto.html">Contactanos</a>
-        <a class="pestania" href="../index.html">Recetas</a>
-        <a class="pestania" href="">Inicio</a>
-        <a class="pestania" href="./Faq.html">Faq</a>
+        <a class="pestania" href="main.html">Recetas</a>
+        <a class="pestania" href="../Index.html">Inicio</a>
+        <a class="pestania" href="Faq.html">Faq</a>
         <img class="logo-container" src="../Imagenes/logo-9976.png" alt="Logo" width="50" height="30">
 </nav>
 <body>
@@ -78,5 +78,13 @@
             return true;
         }
     </script>
+    <footer>
+        <h2><b>otras recetas</b></h2>
+       
+            <li><a href="https://elgourmet.com/recetas/">El gourmet</a></li>
+            <li><a href="https://www.lanacion.com.ar/recetas/">La Nacion</a></li>
+            <li><a href="https://www.paulinacocina.net/recetas">PaulinaCocina</a></li>
+            <p>&copy; 2024 Sabor Argentino: Recetas Caseras y Auténticas</p>
+    </footer>
 </body>
 </html>
