--- a/templates/receta1.html
+++ b/templates/receta1.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="../Planillas-de-estilos/Recetas.css">  
 
         <div class="logo-container">
-            <a href="../index.html">
+            <a href="main.html">
             <img src="../Imagenes/flecha-pequena-izquierda.png" style="border-radius: 50px; width: 50px;padding: 5px; ">
         </a>
         </div>
