--- a/templates/receta4.html
+++ b/templates/receta4.html
@@ -6,7 +6,7 @@
     <title>Empanadas</title>
     <link rel="stylesheet" href="../Planillas-de-estilos/Recetas.css">  
         <div class="logo-container">
-            <a href="../index.html">
+            <a href="main.html">
                 <img src="../Imagenes/flecha-pequena-izquierda.png" style="border-radius: 50px; width: 50px;padding: 5px; ">        </a>
         </div>
         <img class="logo" src="../Imagenes/logo-9976.png">
@@ -15,8 +15,10 @@
 <body>
     <div class="main-container">
         <h1>Cómo hacer empanadas de carne</h1>
-        <img class="imagen-comida" src="../Imagenes/Empanadas.jpg"> 
-        <img class="imagen-comida" src="../Imagenes/empanadas-argentinas.jpg">
+        <div class="imagen-container">
+            <img class="imagen-comida" src="../Imagenes/Empanadas.jpg"> 
+            <img class="imagen-comida" src="../Imagenes/empanadas-argentinas.jpg">
+        </div>
         <div class="receta">
             <h2>Ingredientes</h2>
             
