--- a/Planillas-de-estilos/Recetas.css
+++ b/Planillas-de-estilos/Recetas.css
@@ -22,7 +22,11 @@ body{
     max-width: 250px;
     align-items: center;
     justify-content: center;
-    padding-block: 10px;
+    border-radius: 10px
+}
+
+.imagen-container{
+    display: flex;
 }
 .logo-container{
     display: flexbox;
@@ -34,8 +38,7 @@ body{
 
 .receta{
     border-top: 3px solid black;
-    padding-inline: 10px;
-    padding-bottom: 2px;
+    padding: 8px;
     align-items: center;
     text-align: justify;
    
@@ -53,6 +56,8 @@ li{
 }
 
 .main-container{
+    align-items: center;
+    text-align: center;
     border-style:ridge;
     grid-row: 2;
     grid-column: 2;
