--- a/templates/Faq.html
+++ b/templates/Faq.html
@@ -10,10 +10,10 @@
     <body>
         <nav>
             <img class="logo-container" src="../Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
-            <a class="pestania" href="./Contacto.html">Contactanos</a>
-            <a class="pestania" href="../index.html">Recetas</a>
-            <a class="pestania" href="">Inicio</a>
-            <a class="pestania" href="./Faq.html">Faq</a>
+            <a class="pestania" href="Contacto.html">Contactanos</a>
+            <a class="pestania" href="main.html">Recetas</a>
+            <a class="pestania" href="../Index.html">Inicio</a>
+            <a class="pestania" href="Faq.html">Faq</a>
             <img class="logo-container" src="../Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
         </nav>
         <img class="fondo" src="../Imagenes/background.jpg" height="50">
