--- a/Planillas-de-estilos/Index.css
+++ b/Planillas-de-estilos/Index.css
@@ -5,19 +5,15 @@
 }
 nav{
     display: flex;
-    border: 300px;
-    align-items: flex-start;
     justify-content: space-around;
     border-color: black;
     background-color:rgba(118, 54, 11, 0.833);
     padding: 10px;
 }
 body{
-    display: flex;
-    flex-direction: column;
-    
+    display: block;
     background-color: rgba(135, 64, 16, 0.833);
-    height:max-content ;
+
 }
 a{
     text-decoration: none;
@@ -53,4 +49,7 @@ footer{
     align-items: flex-end;
     background-color:#ffbf00a3;
     margin-top: 5rem;
+}
+.start-container{
+    text-align: center;
 }
