--- a/templates/Faq.html
+++ b/templates/Faq.html
@@ -16,7 +16,9 @@
             <a class="pestania" href="Faq.html">Faq</a>
             <img class="logo-container" src="../Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
         </nav>
-        <img class="fondo" src="../Imagenes/background.jpg" height="50">
+        <div class="fondo">
+            <img class="photo" src="../Imagenes/logo-9976.png" height="50">
+        </div>
         <div class="main_body">
             <h1>Preguntas frecuentes</h1>
             <ul>
