--- a/Planillas-de-estilos/Index.css
+++ b/Planillas-de-estilos/Index.css
@@ -24,10 +24,19 @@ a{
 .pestania{
     justify-content:baseline;
     text-align: center;
-    color:rgba(255, 255, 255, 0.692);
+    color:rgb(255, 255, 255);
+    background-color: #e1ab09a3;
+    border-radius: 10px;
+    padding-top: 15px;
     width:100%;
-    margin-inline: 10px;
+    margin-inline: 1em;
     height:35px;
+   
+}
+.pestania:hover{
+    background-color: rgba(135, 64, 16, 0.833);
+    box-shadow: 2px 2px 2px 0 black;
+    color: yellow;
 }
 .muestra{
     margin-top: 2em;
