--- a/templates/Faq.html
+++ b/templates/Faq.html
@@ -10,9 +10,9 @@
     <body>
         <nav>
             <img class="logo-container" src="../Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
-            <a class="pestania" href="Contacto.html">Contactanos</a>
-            <a class="pestania" href="main.html">Recetas</a>
             <a class="pestania" href="../Index.html">Inicio</a>
+            <a class="pestania" href="main.html">Recetas</a>
+            <a class="pestania" href="Contacto.html">Contactanos</a>
             <a class="pestania" href="Faq.html">Faq</a>
             <img class="logo-container" src="../Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
         </nav>
@@ -27,12 +27,12 @@
                 <li>Una vez ahi disfute de las recetas que proporciona la pagina</li>
                 <h2>Como puedo dejar un puntaje a las recetas?</h2>
                 <li>Actualmente no es posible,pero en un futuro cercano esperamos habilitarlas...</li>
-                <h2>es posible agregar nuevas recetas?</h2>
+                <h2>Es posible agregar nuevas recetas?</h2>
                 <li>Las recetas son agregadas manualmente por cada administrador de la pagina</li>
-                <li>es necesario asegurarse que no contengan nada inapropiado y que sean las mejores recetas</li>
+                <li>Es necesario asegurarse que no contengan nada inapropiado y que sean las mejores recetas</li>
                 <h2>Que hago si encuentro un error en la pagina?</h2>
                 <li>En la barra superior encontrara la opcion de "contactanos" donde nos podra enviar cualquier resena de la pagina</li>
-                <li>en caso de encontrar algun error envie un screenshot del mismo y nos pondremos en contacto</li>
+                <li>En caso de encontrar algun error envie un screenshot del mismo y nos pondremos en contacto</li>
             </ul>
         </div>
         <footer>
