--- a/templates/Faq.html
+++ b/templates/Faq.html
@@ -24,15 +24,15 @@
             <ul>
                 <h2>Como puedo entrar a las recetas?</h2>
                 <li>Seleccione la opcion de "Recetas" en la barra superior</li>
-                <li>Una vez ahi disfute de las recetas que proporciona la pagina</li>
+                <li>Una vez ahi disfute de las recetas que proporciona la página</li>
                 <h2>Como puedo dejar un puntaje a las recetas?</h2>
                 <li>Actualmente no es posible,pero en un futuro cercano esperamos habilitarlas...</li>
                 <h2>Es posible agregar nuevas recetas?</h2>
-                <li>Las recetas son agregadas manualmente por cada administrador de la pagina</li>
+                <li>Las recetas son agregadas manualmente por cada administrador de la página</li>
                 <li>Es necesario asegurarse que no contengan nada inapropiado y que sean las mejores recetas</li>
-                <h2>Que hago si encuentro un error en la pagina?</h2>
-                <li>En la barra superior encontrara la opcion de "contactanos" donde nos podra enviar cualquier resena de la pagina</li>
-                <li>En caso de encontrar algun error envie un screenshot del mismo y nos pondremos en contacto</li>
+                <h2>Que hago si encuentro un error en la página?</h2>
+                <li>En la barra superior encontrará la opción de "contactanos" donde nos podra enviar cualquier reseña de la página</li>
+                <li>En caso de encontrar algún error envie un screenshot del mismo y nos pondremos en contacto</li>
             </ul>
         </div>
         <footer>
