--- a/templates/Faq.html
+++ b/templates/Faq.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>FAQ</title>
+        <title>Crud</title>
         <link rel="icon" href="../Imagenes/logo-9976.ico">
         <link rel="stylesheet" href="../Planillas-de-estilos/Faq.css">  
     </head>
@@ -45,9 +45,6 @@
                     <div class="btn-container" id="btn-container">
                         <input type="hidden"  name="id" id="id-movie">
                         <button class="btn-cac" type="button" id="btn-save-movie">Agregar</button>
-               
-                        <input type="hidden"  name="id" id="id-movie">
-                        <button class="btn-cac" type="button" id="btn-update-movie">Consultar</button>
                     </div>
                     </form> 
             </section>
@@ -78,6 +75,6 @@
                 <p>&copy; 2024 Sabor Argentino: Recetas Caseras y Auténticas</p>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="../static/js/crud-movies.js"></script>
+        <script src="../Logica/crud-recetas-fetch.js"></script>
     </body>
 </html>
