--- a/templates/Faq.html
+++ b/templates/Faq.html
@@ -30,34 +30,25 @@
                             <input type="text" class="input-search" name="name" id="name">
                         </div>
                         <div class="form-control d-flex-column">
-                            <label for="ingredientes">Ingredientes</label>
-                            <input type="text" class="input-search" name="ingredientes" id="ingredientes">
-                        </div>
-                        <div class="form-control d-flex-column">
-                            <label for="descripcion">Descripción</label>
-                            <input type="text" class="input-search" name="descripcion" id="descripcion">
-                        </div>
-                        <div class="form-control d-flex-column">
                             <label for="cheff">Cheff</label>
                             <input type="url" class="input-search" name="cheff" id="cheff">
                         </div>    
                         <div class="form-control d-flex-column">
                             <label for="precio">Precio</label>
                             <input type="url" class="input-search" name="precio" id="precio">
-                        </div>              
+                        </div>
+                        <div class="form-control d-flex-column">
+                            <label for="ingredientes">Ingredientes</label>
+                            <textarea class="input-search" name="ingredientes" id="ingredientes"></textarea>
+                        </div>
+                        <div class="form-control d-flex-column">
+                            <label for="descripcion">Descripción</label>
+                            <textarea class="input-search" name="descripcion" id="descripcion"></textarea>
+                        </div>                 
                     </div>
                     <div class="btn-container" id="btn-container">
-<<<<<<< HEAD
                         <input type="hidden"  name="id" id="id-movie">
                         <button class="btn-cac" type="button" id="btn-save-movie">Agregar</button>
-=======
-                        <input type="hidden"  name="id" id="id_receta">
-                        <button class="btn-cac" type="button" id="btn-save-receta">Agregar</button>
-                        <!--
-                        <input type="hidden"  name="id" id="id_receta">
-                        <button class="btn-cac" type="button" id="btn-update-receta">Consultar</button>
-                        -->
->>>>>>> 3c92545a56eab8653f8cae95f08d3cc30b8bc530
                     </div>
                     </form> 
             </section>
