Se arreglo FIX en front, verificar el tamaño del boton

--- a/templates/Faq.html
+++ b/templates/Faq.html
@@ -47,8 +47,8 @@
                         </div>                 
                     </div>
                     <div class="btn-container" id="btn-container">
-                        <input type="hidden"  name="id" id="id-movie">
-                        <button class="btn-cac" type="button" id="btn-save-movie">Agregar</button>
+                        <input type="hidden"  name="id" id="id-receta">
+                        <button class="btn-cac" type="button" id="btn-save-receta">Agregar</button>
                     </div>
                     </form> 
             </section>
