--- a/templates/Faq.html
+++ b/templates/Faq.html
@@ -47,7 +47,7 @@
                         </div>                 
                     </div>
                     <div class="btn-container" id="btn-container">
-                        <input type="hidden"  name="id" id="id-receta">
+                        <input type="hidden"  name="id" id="id_receta">
                         <button class="btn-cac" type="button" id="btn-save-receta">Agregar</button>
                     </div>
                     </form> 
