--- a/templates/Crud.html
+++ b/templates/Crud.html
@@ -13,7 +13,7 @@
             <a class="pestania" href="../Index.html">Inicio</a>
             <a class="pestania" href="main.html">Recetas</a>
             <a class="pestania" href="Contacto.html">Contactanos</a>
-            <a class="pestania" href="Faq.html">Crud</a>
+            <a class="pestania" href="Crud.html">Crud</a>
             <img class="logo-container" src="../Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
         </nav>
         <div class="fondo">
@@ -35,7 +35,7 @@
                         </div>    
                         <div class="form-control d-flex-column">
                             <label for="precio">Precio</label>
-                            <input type="url" class="input-search" name="precio" id="precio">
+                            <input type="number" class="input-search" name="precio" id="precio">
                         </div>
                         <div class="form-control d-flex-column">
                             <label for="ingredientes">Ingredientes</label>
