--- a/templates/main.html
+++ b/templates/main.html
@@ -10,7 +10,7 @@
         <a class="pestania" href="../Index.html">Inicio</a>
         <a class="pestania" href="main.html">Recetas</a>
         <a class="pestania" href="Contacto.html">Contactanos</a>
-        <a class="pestania" href="Faq.html">Crud</a>
+        <a class="pestania" href="Crud.html">Crud</a>
         <img class="logo-container" src="../Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
 
     </nav>
