--- a/templates/Crud.html
+++ b/templates/Crud.html
@@ -22,7 +22,7 @@
         <main> 
             <section id="form" class="container ">
                 <h2 class="search-title">Gestión de recetas</h2>
-                <p class="description" >En esta sección se podra llevar a cabo la gestión de las Nuevas Recetas</p>
+                <p class="description" >En esta sección se podra llevar a cabo la gestión de las Nuevas Recetas (ingredientes y descripcion son campos extensibles)</p>
                 <form action="#"  id="form-receta">
                     <div class="d-flex">
                         <div class="form-control d-flex-column">
